Make sure user avatar doesn't bleed through navbar width of 40px

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -6,6 +6,7 @@ body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
 // header
-.navbar .dropdown.signin {
-  margin-right: 30px;
+.nav .avatar {
+  max-height: 40px;
+  max-width:  40px;
 }
